[package]
name = "TeXnicality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.60"
katex = { version = "0.4.5", features = ["wasm-js"], default-features = false }
rand = "0.8.5"
regex = "1.7.0"
serde = { version = "1.0.150", features = ["derive"] }
serde-json-wasm = "0.5.0"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlButtonElement',
  'EventListener',
  'HtmlTextAreaElement',  
  'console'
]
